Quase finalizados cap 1 e 2

--- a/Dissertacao/Capitulo1/Cap1.tex
+++ b/Dissertacao/Capitulo1/Cap1.tex
@@ -1,25 +1,31 @@
 %---------- Primeiro Capitulo ----------
 \chapter{Introdu\c{c}\~ao}
 
-Codificada na Classifica\c{c}\~ao Internacional de Doen\c{c}as (CID-10) com os caracteres F98.5, a gagueira \'e cientificamente considerada como dist\'urbio ou transtorno de flu\^encia da fala \cite{Merlo2018}. Ou seja, \'e um dist\'urbio neurol\'ogico e involunt\'ario, caracterizado por interrup\c{c}\~oes ou prolongamentos, aud\'iveis ou n\~ao de sons e s\'ilabas \cite{Buechel2004}.
+Afetando cerca de 1\% da popula\c{c}\~ao mundial e codificada na Classifica\c{c}\~ao Internacional de Doen\c{c}as (CID-10) com os caracteres F98.5, a gagueira \'e cientificamente considerada como dist\'urbio ou transtorno de flu\^encia da fala \cite{Merlo2013}. Ou seja, \'e um dist\'urbio neurol\'ogico e involunt\'ario, caracterizado por interrup\c{c}\~oes ou prolongamentos, aud\'iveis ou n\~ao de sons e s\'ilabas \cite{Buechel2004}.
 
-A retroalimenta\c{c}\~ao auditiva atrasada (RAA) \'e um m\'etodo de tratamento da gagueira, que utiliza-se de duas grandezas, a frequ\^encia e o atraso (delay), para proporcionar o efeito coro, causado quando uma pessoa que gagueja, fala ou l\^e ao mesmo tempo que outra pessoa, proporcionando melhorias significativas na flu\^encia.
-Um aparelho tecnol\'ogico que oferece o RAA como funcionalidade \'e o SpeechEasy da Microsom, que se assemelha muito em sua apar\^encia, com um aparelho para deficientes auditivos. Segundo a Microsom, o SpeechEasy tem eficiência em 75 porcento das pessoas que o utilizam e cerca de 80 porcento dos clientes que adquiriram o produto, est\~ao satisfeitos com o resultado.
+A retroalimenta\c{c}\~ao auditiva atrasada (RAA) \'e um m\'etodo de tratamento da gagueira, que utiliza-se de duas grandezas, a frequ\^encia e o atraso (\textit{delay}), para proporcionar o efeito coro, causado quando uma pessoa que gagueja, fala ou l\^e ao mesmo tempo que outra pessoa, ou seja, faz com que  a pessoa que gagueja ou\c{c}a suas pr\'oprias palavras com um certo atraso tendo a sensa\c{c}\~ao de que est\'a falando junto com outros \cite{Udemo2008}.
 
-\section{Motiva\c{c}\~ao}
+Um aparelho tecnol\'ogico que oferece o RAA como funcionalidade \'e o \textit{SpeechEasy} da Microsom, que se assemelha muito em sua apar\^encia, com um aparelho para deficientes auditivos. Segundo a Microsom, o \textit{SpeechEasy} tem efici\^encia em 75\% das pessoas que o utilizam e cerca de 80\% dos clientes que adquiriram o produto, est\~ao satisfeitos com o resultado. Uma pesquisa realizada em 31 pessoas com gagueira, registrou resultados parecidos, apresentando melhorias de cerca de 79\% na leitura e 61\% na fala auto-expressiva dos participantes com a utiliza\c{c}\~ao do aparelho \cite{Andrade2008}. 
 
-Uma das principais vantagens do uso do estilo de formata\c{c}\~ao {\ttfamily utfprcptex.cls} para \LaTeX\ \'e a formata\c{c}\~ao \textit{autom\'atica} dos elementos que comp\~oem um documento acad\^emico, tais como capa, folha de rosto, dedicat\'oria, agradecimentos, ep\'igrafe, resumo, abstract, listas de figuras, tabelas, siglas e s\'imbolos, sum\'ario, cap\'itulos, refer\^encias, etc. Outras grandes vantagens do uso do \LaTeX\ para formata\c{c}\~ao de documentos acad\^emicos dizem respeito \`a facilidade de gerenciamento de refer\^encias cruzadas e bibliogr\'aficas, al\'em da formata\c{c}\~ao~-- inclusive de equa\c{c}\~oes  matem\'aticas~-- correta e esteticamente perfeita.
+Existem aplicativos que exercem a funcionalidade de simular o efeito coro, tanto para dispositivos m\'oveis como para computadores de mesa e notebooks. Para realizar a simula\c{c}\~ao do efeito coro de maneira adequada \'e recomendado utilizar um aparelho de reprodu\c{c}\~ao que contenha microfone, podendo ser um fone de ouvido convencional ou um \textit{headset} de sua prefer\^encia.
+
+ 
+\section{Problema}
+
+Custando aproximadamente 10 mil reais e podendo ser adquirido somente sob consulta com uma fonoaudi\'ologa especializada, o \textit{SpeechEasy} acaba se tornando uma op\c{c}\~ao restrita para pessoas com poucas condi\c{c}\~oes financeiras. Segundo o Instituto Brasileiro de Flu\^encia a Microson est\'a em contato com o Minist\'erio de Sa\'ude para que o aparelho seja disponibilizado pelo SUS, por\'em enquanto isso n\~ao ocorre, sua disponibilidade \'e limitada para quem tem condi\c{c}\~oes de investir cerca de 10 sal\'arios m\'inimos neste produto.
+
+\section{Justificativa}
 
 \section{Objetivos}
 
 \subsection{Objetivo Geral}
 
-Prover um modelo de formata\c{c}\~ao \LaTeX\ que atenda \`as Normas para Elabora\c{c}\~ao de Trabalhos Acad\^emicos da UTFPR~\cite{UTFPR2008}.
+Desenvolver um aplicativo para dispositivos m\'oveis com sistema operacional Android, gratuito e funcional, que atenda o requisito principal de simular o efeito coro. 
 
 \subsection{Objetivos Espec\'ificos}
 
 \begin{itemize}
-	\item Obter documentos acad\^emicos automaticamente formatados com corre\c{c}\~ao e perfei\c{c}\~ao est\'etica.
-	\item Desonerar autores da tediosa tarefa de formatar documentos acad\^emicos, permitindo sua concentra\c{c}\~ao no conte\'udo do mesmo.
-	\item Desonerar orientadores e examinadores da tediosa tarefa de conferir a formata\c{c}\~ao de documentos acad\^emicos, permitindo sua concentra\c{c}\~ao no conte\'udo do mesmo.
+	\item Inclus\~ao social de pessoas com gagueira em atividades que exijam comunica\c{c}\~ao oral, com a utiliza\c{c}\~ao do aplicativo.
+	\item Acessibilidade para pessoas com poucas condi\c{c}\~oes financeiras para adquirir o \textit{SpeechEasy}, tornando o aplicativo uma alternativa gratuita que exerce o mesmo papel.
+	\item Disponibilizar uma op\c{c}\~ao gratuita para fonoaudi\'ologos e profissionais da \'area de aux\'ilio ao tratamento de pessoas com gagueira, utilizando o RAA.
 \end{itemize} 
