--- a/Dissertacao/modelo_dissertacao.tex
+++ b/Dissertacao/modelo_dissertacao.tex
@@ -74,8 +74,8 @@
 \nivel{Graduação}
 \titulacao{Bacharel}
 \area{Engenharia de Software}
-\titulo{Retroalimenta\c{c}\~ao Auditiva Atrasada} % titulo do trabalho em português
-\title{Delayed Auditory Feedback} % titulo do trabalho em inglês
+\titulo{Retroalimenta\c{c}\~ao Auditiva Atrasada: Aplicativo de Aux\'ilio ao Tratamento de Pessoas com Gagueira} % titulo do trabalho em português
+\title{Delayed Auditory Feedback: App of Aid the Treatment of People with Stuttering} % titulo do trabalho em inglês
 \autor{Jefferson de Fran\c{c}a Filho} % autor do trabalho
 \cita{FRANÇA, Filho} % sobrenome (maiúsculas), nome do autor do trabalho
 
@@ -107,7 +107,7 @@
 %\quintoassina[Título \\Universidade]{Quinto Membro da Banca}
 %\sextoassina[Título \\Universidade]{Sexto Membro da Banca}
 %\setimoassina[Título \\Universidade]{Sétimo Membro da Banca}
-\datadefesaUTFPR{29}{07}{2012} %% A data deve ser inserida no formato dd/mm/aaaa
+\datadefesaUTFPR{00}{05}{2018} %% A data deve ser inserida no formato dd/mm/aaaa
 %%%%% Comentar para versao impressa
 \versaoeletronica{``A Folha de Aprovação assinada encontra-se na Coordenação do Curso do Programa''}% Texto a ser inserido na versão eletronica do documento.
 
