--- a/Dissertacao/Capitulo1/Cap1.tex
+++ b/Dissertacao/Capitulo1/Cap1.tex
@@ -20,6 +20,15 @@ Existe uma grande dificuldade em encontrar uma ferramenta para dispositivos m\'o
 
 \section{Justificativa}
 
+O problema no Brasil \'e que o SpeechEasy n\~ao pode ser adquirido pela maioria das pessoas que necessitam, devido ao seu valor. Existem outras solu\c{c}\~oes como aplicativos mobile que tentam fazer o mesmo papel por\'em utilizando um fone de ouvido \textit{bluetooth} ou qualquer outro tipo de dispositivo de reprodu\c{c}\~ao. 
+
+\'E muito dif\'icil encontrar aplicativos que disponibilizam essa funcionalidade de maneira eficiente e gratuita, outros aplicativos que trazem a fun\c{c}\~ao de simular o efeito coro de forma simples e bem superficial n\~ao s\~ao gratuitos, o que torna dif\'icil obter resultados satisfat\'orios. 
+
+Realizar apresenta\c{c}\~oes, semin\'arios ou quaisquer atividades que necessitam de atividade vocal na universidade, para pessoas com gagueira \'e uma tarefa bem dif\'icil, pois al\'em da dificuldade de demonstrar conhecimento sobre o assunto exposto, existe tamb\'em a dificuldade para se expressar de maneira fluente. 
+
+O problema na universidade \'e que n\~ao existem mecanismo que auxiliam esses alunos a lidarem com essas situa\c{c}\~oes, o que acaba muitas vezes fazendo com que a pessoa que tem gagueira desista de realizar determinadas atividades pela dificuldade de comunica\c{c}\~ao.
+
+
 \section{Objetivos}
 
 \subsection{Objetivo Geral}
