Inicio do cap 3 + correções

--- a/Dissertacao/Capitulo1/Cap1.tex
+++ b/Dissertacao/Capitulo1/Cap1.tex
@@ -5,7 +5,7 @@ Afetando cerca de 1\% da popula\c{c}\~ao mundial e codificada na Classifica\c{c}
 
 A retroalimenta\c{c}\~ao auditiva atrasada (RAA) \'e um m\'etodo de tratamento da gagueira, que utiliza-se de duas grandezas, a frequ\^encia e o atraso (\textit{delay}), para proporcionar o efeito coro, causado quando uma pessoa que gagueja, fala ou l\^e ao mesmo tempo que outra pessoa, ou seja, faz com que  a pessoa que gagueja ou\c{c}a suas pr\'oprias palavras com um certo atraso tendo a sensa\c{c}\~ao de que est\'a falando junto com outros \cite{Udemo2008}.
 
-Um aparelho tecnol\'ogico que oferece o RAA como funcionalidade \'e o \textit{SpeechEasy} da Microsom, que se assemelha muito em sua apar\^encia, com um aparelho para deficientes auditivos. Segundo a Microsom, o \textit{SpeechEasy} tem efici\^encia em 75\% das pessoas que o utilizam e cerca de 80\% dos clientes que adquiriram o produto, est\~ao satisfeitos com o resultado. Uma pesquisa realizada em 31 pessoas com gagueira, registrou resultados parecidos, apresentando melhorias de cerca de 79\% na leitura e 61\% na fala auto-expressiva dos participantes com a utiliza\c{c}\~ao do aparelho \cite{Andrade2008}. 
+Um aparelho tecnol\'ogico que oferece o RAA como funcionalidade \'e o \textit{SpeechEasy} da Microsom, que se assemelha muito em sua apar\^encia, com um aparelho para deficientes auditivos. Segundo a Microsom, o \textit{SpeechEasy} tem efici\^encia em 75\% das pessoas que o utilizam e cerca de 80\% dos clientes que adquiriram o produto, est\~ao satisfeitos com o resultado \cite{Microson2015}. Uma pesquisa realizada em 31 pessoas com gagueira, registrou resultados parecidos, apresentando melhorias de cerca de 79\% na leitura e 61\% na fala auto-expressiva dos participantes com a utiliza\c{c}\~ao do aparelho \cite{Andrade2008}. 
 
 Existem aplicativos que exercem a funcionalidade de simular o efeito coro, tanto para dispositivos m\'oveis como para computadores de mesa e notebooks. Para realizar a simula\c{c}\~ao do efeito coro de maneira adequada \'e recomendado utilizar um aparelho de reprodu\c{c}\~ao que contenha microfone, podendo ser um fone de ouvido convencional ou um \textit{headset} de sua prefer\^encia.
 
