--- a/Dissertacao/Capitulo3/Cap3.tex
+++ b/Dissertacao/Capitulo3/Cap3.tex
@@ -1,12 +1,48 @@
 %---------- Terceiro Capitulo ----------
 \chapter{Proposta}
 
-A proposta desse projeto \'e desenvolver um aplicativo para dispositivos m\'oveis com sistema operacional Android, tendo como fun\c{c}\~ao principal o RAA (Retroalimenta\c{c}\~ao Auditiva Atrasada), ou seja, um aplicativo que consiga reproduzir a voz do usu\'ario simultaneamente com um pequeno atraso configur\'avel, num tom diferente tamb\'em configur\'avel. 
+A proposta desse projeto \'e desenvolver um aplicativo para dispositivos m\'oveis com sistema operacional Android, tendo como fun\c{c}\~ao principal o \sigla{RAA}{Retroalimenta\c{c}\~ao Auditiva Atrasada}, ou seja, um aplicativo que consiga reproduzir a voz do usu\'ario simultaneamente com um pequeno atraso configur\'avel, num tom diferente tamb\'em configur\'avel. 
 
-A finalidade dessas configura\c{c}\~oes que devem ser adaptadas para cada indiv\'iduo \'e simular o efeito coro, que nada mais é do que um efeito causado quando uma pessoa que possui gagueira, fala ou l\^e ao mesmo tempo que outra, trazendo melhorias significativas na fala \cite{Udemo2008}.
+A finalidade dessas configura\c{c}\~oes que devem ser adaptadas para cada indiv\'iduo \'e simular o efeito coro, que nada mais \'e do que um efeito causado quando uma pessoa que possui gagueira, fala ou l\^e ao mesmo tempo que outra, trazendo melhorias significativas na fala \cite{Udemo2008}.
 
 \section{Tecnologias e Ferramentas}
+\begin{itemize}
+	
+	\item Java: utiliza-se como linguagem de programa\c{c}\~ao.
+	
+	\item Android Studio: utiliza-se como ambiente de desenvolvimento 		(\sigla{IDE}{Ambiente de Desenvolvimento Integrado}).
+
+	\item Github: utiliza-se como reposit\'orio de armazenamento e controle de vers\~oes.
+
+	\item UML: utiliza-se como linguagem-padr\~ao para a elabora\c{c}\~ao da estrutura de projetos de \textit{software}.
+
+	\item Astah: utiliza-se como ferramenta de modelagem \sigla{UML}{Linguagem Unificada de Modelagem}. 
+
+\end{itemize}
+
 \section{M\'etodo}
+
 \section{An'alise e Desenvolvimento}
+
 \section{Cronograma}
 
+\begin{table}[!htb]
+	 \caption{Cronograma de atividades}
+	 \label{tab:cronograma}
+	 \begin{center}
+		  \begin{tabular}{l||c|c|c|c|c|c|c|c}
+			    \hline
+			    \multicolumn{9}{c}{2018} \\ \hline \hline
+			    \multicolumn{1}{c||}{Fase} & M\^es 1     & M\^es 2     & M\^es 3     & M\^es 4   & M\^es 5 & M\^es 6 & M\^es 7 & M\^es 8\\ \hline
+			    Levantamento de requisitos    & $\bullet$ &           &          &         &  &  &  & \\
+			    An\'alise de requisitos    & $\bullet$          &  & &         &  &  &  &\\
+			    Projeto   &           &  $\bullet$         & & &  &  &  &\\
+			    Implementa\c{c}\~ao    &           &          &   $\bullet$       &  $\bullet$        &  $\bullet$  & $\bullet$ &  &\\
+			    Testes    &           &           & &$\bullet$ & $\bullet$ & $\bullet$ &$\bullet$  &\\
+			    Implanta\c{c}\~ao    &           &           & & &  &  &  &$\bullet$\\
+			    \hline
+			  \end{tabular}
+		 \vspace{8pt} %%%% Deve ser acrescentado para que haja espaço entre o final da tabela e a fonte.
+		  \fonte{Fonte Modelo.}
+		 \end{center}
+\end{table}
