Adição das tabelas e quadros

--- a/Dissertacao/Capitulo2/Cap2.tex
+++ b/Dissertacao/Capitulo2/Cap2.tex
@@ -8,7 +8,7 @@ Com o objetivo de simular o efeito coro, além do \textit{SpeechEasy} que integra
 
 Para computadores de mesa e notebooks com sistema operacional Windows, existe a ferramenta "Software Mais Fluência Win DAF/FAF Software", desenvolvida em 2009 pelo Henrique Confessor, \'e \textit{freeware} podendo ser distribu\'ida e utilizada livremente. Disponibilizada gratuitamente para \textit{download} no site da "Abra Gagueira". 
 
-Para dispositivos m\'oveis com sistema operacional Android ou IOS existe o \textit{DAF Assistant} que tem uma vers\~ao gratuita, por\'em com limite de tempo para sua utiliza\c{c}\~ao, j\'a sua vers\~ao paga que n\~ao possui essa restri\c{c}\~ao, custa aproximadamente 13 reais na \textit{Play Store} e 33 reais no \textit{Itunes}, variando de acordo com preço do dollar.
+Para dispositivos m\'oveis com sistema operacional Android ou IOS existe o \textit{DAF Assistant} que tem uma vers\~ao gratuita, por\'em com limite de tempo para sua utiliza\c{c}\~ao, j\'a sua vers\~ao paga que n\~ao possui essa restri\c{c}\~ao, custa aproximadamente 13 reais na \textit{Play Store} e 33 reais no \textit{Itunes}, variando de acordo com preço do dollar \cite{Artefact2012}.
 
 Com o intuito de fornecer o \sigla{FAA}{\textit{Feedback} Auditivo Atrasado}, existe o aplicativo "Terapia para a gagueira - FAA", que \'e gratuito e traz informa\c{c}\~oes interessantes sobre o tratamento da gagueira, como dicas de como utilizar o aplicativo e informações adicionais sobre tratamentos que melhoram a flu\^encia da fala. Lembrando que diferente da \sigla{RAA}{Retroalimenta\c{c}\~ao Auditiva Atrasada}, o FAA trabalha apenas com o atraso na reprodução da voz, n\~ao alterando a frequ\^encia com que a voz \'e reproduzida. 
 
