--- a/Dissertacao/Capitulo3/Cap3.tex
+++ b/Dissertacao/Capitulo3/Cap3.tex
@@ -107,7 +107,15 @@ Nesta se\c{c}\~ao apresenta-se os requisitos do sistema, divididos em:
 	\fonte{Fonte Modelo.}
 \end{quadro}
 
-\subsection{}
+\subsection{Diagrama de Classes}
+
+\begin{figure}[!htb]
+	\centering
+	%\captionsetup{width=0.97\textwidth}
+	\caption[DC01]{Diagrama de Classes. \label{fig:diagramadeclasses}}
+	\includegraphics[height=13cm]{./Figuras/class_diagram.png}% <- formatos PNG, JPG e PDF
+	\fonte{Fonte Modelo.}
+\end{figure}
 
 \section{Cronograma}
 
@@ -117,9 +125,7 @@ Nesta se\c{c}\~ao apresenta-se os requisitos do sistema, divididos em:
 	 \begin{center}
 		  \begin{tabular}{|l||c|c|c|c|c|c|c|c|c|c|}
 			    \hline
-			    \multicolumn{11}{c}{2018} \\ \hline \hline
-			    \multicolumn{11}{c}{M\^es} \\ \hline \hline
-			    \multicolumn{1}{c||}{Fase} 	&1     			&2     			&3     			&4   			&5 				&6 			&7 			&8			&9				&10\\ \hline
+			    \multicolumn{1}{|c||}{Fase} 	&1     			&2     			&3     			&4   			&5 				&6 			&7 			&8			&9				&10\\ \hline
 			    Levantamento de requisitos 	& $\bullet$  	&           	&          		&         		&  				&  			&  			&			&	 			&\\
 			    An\'alise de requisitos    	& $\bullet$     &  				& 				&         		&  				&  			&  			& 			&				&\\
 			    Projeto   				   	&           	&$\bullet$    	& 				& 				&  				&  			&  			& 			&				&\\
