--- a/Dissertacao/modelo_dissertacao.tex
+++ b/Dissertacao/modelo_dissertacao.tex
@@ -18,12 +18,15 @@
 % ------
 %%% Pacotes diversos
 % ------
+\let \newfloat \undefined
+\usepackage{floatrow}
 \usepackage[latin1]{inputenc} % pacote para acentuacao direta
 \usepackage{amsmath,amsfonts,amssymb,amsthm} % pacote matematico
 \usepackage{graphicx} % pacote grafico
 \usepackage[bottom]{footmisc}
 \usepackage{subfig}
 \usepackage{threeparttable}
+
 
 
 % ---
@@ -188,15 +191,7 @@ Il s'agit d'un résumé en français. (maximum de 500 mots).
 \listadefiguras % geração automática da lista de figuras
 \listadetabelas % geração automática da lista de tabelas
 \listadequadros % geração automática da lista de quadros
-\listadegraficos % geração automática da lista de gráficos
-\listadefotos % geração automática da lista de fotos
-\listadefluxogramas % geração automática da lista de fluxogramas
 \listadesiglas  % geração automática da lista de siglas
-\listadeabreviaturas  % geração automática da lista de abreviaturas
-\listadeacronimos   % geração automática da lista de acrônimos
-\listadesimbolos % geração automática da lista de símbolos
-
-\listofalgorithms %%%%% EM FASE DE TESTES
 
 % sumario
 \sumario % geração automática do sumario
