Add diagrama de atividades

--- a/Dissertacao/Capitulo3/Cap3.tex
+++ b/Dissertacao/Capitulo3/Cap3.tex
@@ -129,11 +129,19 @@ Apresenta-se o diagrama de casos de uso, documenta o que o sistema faz do ponto 
 	\includegraphics[height=15cm]{./Figuras/usecase_diagram.png}% <- formatos PNG, JPG e PDF
 \end{figure}
 
-
-
 \subsection{Diagrama de Atividades}
 
+Apresenta-se o diagrama de atividades, com o objetivo de mostrar o fluxo de atividades em um \'unico processo, especificando o comportamento do software do ponto de vista funcional \cite{Ventura2016a}. 
+\begin{figure}[H]
+	\centering
+	%\captionsetup{width=0.97\textwidth}
+	\caption[Diagrama de Atividades]{Diagrama de Atividades. \label{fig:diagramadeatividades}}
+	\includegraphics[height=13cm]{./Figuras/activity_diagram.png}% <- formatos PNG, JPG e PDF
+\end{figure}
+
 \section{Cronograma}
+
+Apresenta-se o cronograma, determinando todas as atividades do processo de desenvolvimento do software, com o per\'iodo definido de 10 meses. 
 
 \begin{table}[H]
 	 \caption{Cronograma de atividades}
