--- a/Dissertacao/Referencias/referencias.bib
+++ b/Dissertacao/Referencias/referencias.bib
@@ -87,7 +87,7 @@
 
 @Article{Ventura2016,
   author  = {Pl\'inio Ventura},
-  title   = {O que \'e um Requisito Não-Funcional},
+  title   = {O que \'e um Requisito N\~ao-Funcional},
   journal = {At\'e o momento.},
   year    = {2016},
   url     = {http://www.ateomomento.com.br/o-que-e-um-requisito-nao-funcional/},
@@ -123,6 +123,14 @@
   journal = {Devmedia},
   year    = {2012},
   url     = {https://www.devmedia.com.br/o-que-e-uml-e-diagramas-de-caso-de-uso-introducao-pratica-a-uml/23408},
+}
+
+@Article{Ventura2016a,
+  author  = {P\'inio Ventura},
+  title   = {Entendendo o Diagrama de Atividades da UML},
+  journal = {At\'e o Momento},
+  year    = {2016},
+  url     = {http://www.ateomomento.com.br/uml-diagrama-de-atividades/},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
