Add organização do texto

--- a/Dissertacao/Capitulo1/Cap1.tex
+++ b/Dissertacao/Capitulo1/Cap1.tex
@@ -42,3 +42,16 @@ Desenvolver um aplicativo para dispositivos m\'oveis com sistema operacional And
 	\item Acessibilidade para pessoas com poucas condi\c{c}\~oes financeiras para adquirir o \textit{SpeechEasy}, tornando o aplicativo uma alternativa gratuita que exerce o mesmo papel.
 	\item Disponibilizar uma op\c{c}\~ao gratuita para fonoaudi\'ologos e profissionais da \'area de aux\'ilio ao tratamento de pessoas com gagueira, utilizando o RAA.
 \end{itemize} 
+
+\section{Organiza\c{c}\~ao do Texto}
+
+O documento está organizado em cap\'itulos, dividos em:
+
+\begin{itemize}
+	\item Cap\'itulo 2: apresenta a fundamenta\c{c}\~ao te\'orica dando \^enfase nos trabalhos relacionados, mostrando aplicativos que tenham similaridades com a ferramenta desenvolvida no presente trabalho. 
+	
+	\item Capitulo 3: apresenta a proposta, citando as tecnologias e ferramentas utilizadas, especificando qual o m\'etodo seguido para o desenvolvimento, a an\'alise e desenvolvimento, onde apresenta-se os requisitos do sistema, os diagramas e prot\'otipos de tela, e por fim o cronograma a ser seguido.
+	
+	\item Refer\^encias: apresenta as refer\^encias utilizadas. 
+	 
+\end{itemize}
