--- a/Dissertacao/Capitulo3/Cap3.tex
+++ b/Dissertacao/Capitulo3/Cap3.tex
@@ -139,6 +139,8 @@ Apresenta-se o diagrama de atividades, com o objetivo de mostrar o fluxo de ativ
 	\includegraphics[height=13cm]{./Figuras/activity_diagram.png}% <- formatos PNG, JPG e PDF
 \end{figure}
 
+\section{Prot\'otipos de Tela}
+
 \section{Cronograma}
 
 Apresenta-se o cronograma, determinando todas as atividades do processo de desenvolvimento do software, com o per\'iodo definido de 10 meses. 
