--- a/Dissertacao/Capitulo3/Cap3.tex
+++ b/Dissertacao/Capitulo3/Cap3.tex
@@ -55,7 +55,19 @@ Nesta se\c{c}\~ao apresenta-se os requisitos do sistema, divididos em:
 	
 	\item  Requisitos Funcionais (RF): apresentam as funcionalidades do sistema, ou seja, define oque o sistema far\'a. 
 	
-	\item Requisitos N\~ao-Funcionais (RNF): apresentam os atributos de qualidade para o sistema, ou seja, como o sistema far\'a determinada atividade \cite{Ventura2016}. 
+	\item Requisitos N\~ao-Funcionais (RNF): apresentam os atributos de qualidade para o sistema, ou seja, como o sistema far\'a determinada atividade, podendo ser categorizados em: usabilidade, desempenho, padr\~ao, etc \cite{Ventura2016}. 
+	
+\end{itemize}
+
+A prioridade dos requisitos pode ser classificada em: 
+
+\begin{itemize}
+	
+	\item Essencial: deve ser implementado para que o sistema funcione. 
+
+	\item Importante: sem este requisito o sistema pode funcionar, mas n\~ao da maneira esperada.
+	
+	\item Desej\'avel: este tipo de requisito n\~ao compromete o funcionamento do sistema.
 	
 \end{itemize}
 
@@ -140,6 +152,34 @@ Apresenta-se o diagrama de atividades, com o objetivo de mostrar o fluxo de ativ
 \end{figure}
 
 \section{Prot\'otipos de Tela}
+
+Apresenta-se os prot\'otipos de tela do sistema. 
+
+\begin{itemize}
+	\item Tela Inicial: Nesta tela o usu\'ario tem acesso a todas as funcionalidades do sistema, al\'em de iniciar a simula\c{c}\~ao do efeito coro, ele pode ajustar o atraso e a frequ\^encia de acordo com suas prefer\^encias, tamb\'em tem a op\c{c}\~ao de ativar e desativar a fun\c{c}\~ao de utilizar \textit{headset bluetooth}, localizado no canto superior esquerdo da tela, juntamente com desativar as notifica\c{c}\~oes marcando o \textit{combobox} "Desativar notifica\c{c}\~oes. Desta tela tamb\'em existe a op\c{c}\~ao de navegar entre as telas "Sobre" e "Prefer\^encias", selecionando o \'icone referente a cada tela.
+	\begin{figure}[H]
+		\centering
+		%\captionsetup{width=0.97\textwidth}
+		\caption[Prot\'otipo Tela Inicial]{Prot\'otipo Tela Inicial. \label{fig:prototipotelainicial}}
+		\includegraphics[height=13cm]{./Figuras/prototipo_telainicial.jpg}% <- formatos PNG, JPG e PDF
+	\end{figure}
+	
+	\item Tela Prefer\^encias: Nesta tela o usu\'ario pode criar, alterar, ou excluir um modo, adicionando o atraso e frequ\^encia desejados, al\'em de selecionar as op\c{c}\~oes de ativar/desativar \textit{headset bluetooth} e notifica\c{c}\~oes;
+	\begin{figure}[H]
+		\centering
+		%\captionsetup{width=0.97\textwidth}
+		\caption[Prot\'otipo Tela Prefer\^encias]{Prot\'otipo Tela Prefer\^encia. \label{fig:prototipotelapreferencias}}
+		\includegraphics[height=13cm]{./Figuras/prototipo_telapreferencias.jpg}% <- formatos PNG, JPG e PDF
+	\end{figure}
+
+	\item  Tela Sobre: Neta tela o usu\'ario encontra informa\c{c}\~oes sobre o aplicativo, assim como informa\c{c}\~oes sobre o funcionamento do aplicativo e um tutorial de ajuda. 
+	\begin{figure}[H]
+		\centering
+		%\captionsetup{width=0.97\textwidth}
+		\caption[Prot\'otipo Tela Sobre]{Prot\'otipo Tela Sobre. \label{fig:prototiposobre}}
+		\includegraphics[height=13cm]{./Figuras/prototipo_sobre.jpg}% <- formatos PNG, JPG e PDF
+	\end{figure}
+\end{itemize}
 
 \section{Cronograma}
 
