--- a/Dissertacao/Capitulo3/Cap3.tex
+++ b/Dissertacao/Capitulo3/Cap3.tex
@@ -156,7 +156,7 @@ Apresenta-se o diagrama de atividades, com o objetivo de mostrar o fluxo de ativ
 Apresenta-se os prot\'otipos de tela do sistema. 
 
 \begin{itemize}
-	\item Tela Inicial: Nesta tela o usu\'ario tem acesso a todas as funcionalidades do sistema, al\'em de iniciar a simula\c{c}\~ao do efeito coro, ele pode ajustar o atraso e a frequ\^encia de acordo com suas prefer\^encias, tamb\'em tem a op\c{c}\~ao de ativar e desativar a fun\c{c}\~ao de utilizar \textit{headset bluetooth}, localizado no canto superior esquerdo da tela, juntamente com desativar as notifica\c{c}\~oes marcando o \textit{combobox} "Desativar notifica\c{c}\~oes. Desta tela tamb\'em existe a op\c{c}\~ao de navegar entre as telas "Sobre" e "Prefer\^encias", selecionando o \'icone referente a cada tela.
+	\item Tela Inicial: Nesta tela o usu\'ario tem acesso a todas as funcionalidades do sistema, al\'em de iniciar a simula\c{c}\~ao do efeito coro, ele pode ajustar o atraso e a frequ\^encia de acordo com suas prefer\^encias, tamb\'em tem a op\c{c}\~ao de ativar e desativar a fun\c{c}\~ao de utilizar \textit{headset bluetooth}, localizado no canto superior esquerdo da tela, juntamente com desativar as notifica\c{c}\~oes marcando o \textit{combobox} "Desativar notifica\c{c}\~oes. Desta tela tamb\'em existe a op\c{c}\~ao de navegar entre as telas "Sobre" e "Prefer\^encias", selecionando o \'icone referente a cada tela localizados no canto superior direito.
 	\begin{figure}[H]
 		\centering
 		%\captionsetup{width=0.97\textwidth}
